--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,11 @@
             <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
             <version>2.8.8</version>
         </dependency>
+        <dependency>
+            <groupId>io.github.openfeign</groupId>
+            <artifactId>feign-hc5</artifactId>
+            <version>13.6</version>
+        </dependency>
 
 		<dependency>
 			<groupId>org.projectlombok</groupId>
