--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,10 @@ spring.application.name=bff_agendador
 
 usuario.url=localhost:8080/usuario
 agendador-tarefas.url=localhost:8081/tarefas
+notificacao.url=localhost:8082/email
 server.port =8083
+
+cron.horario = 0 0/5 * * * ?
+
+usuario.email = admin@admin.com
+usuario.senha = 1234
